--- a/Lab2_HTML/author.html
+++ b/Lab2_HTML/author.html
@@ -14,7 +14,7 @@
 	<li>Люблю грати в баскетбол</li>
 	<li>В майбутньому хочу стати Frotend розробником</li>
 	<h1>Зображення</h1>
-	<img src="lab.JPG" width="300">
+	<img src="users.png" width="300">
 	<img src="https://upload.wikimedia.org/wikipedia/commons/b/ba/Home_icon_orange.png" width="32"><a href="index.html">На головну</a>
 </body>
 </html>
