--- a/Lab-3/pages/about.html
+++ b/Lab-3/pages/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<a href="../index.html">На головну</a>
-	<h1>Наш банер</h1>
-	<img src="../images/banners/apple-1920.jpg"
+	<h1 style="text-align:center;color:red"> Наш банер</h1>
+	<img src="../images/banners/apple-1920.jpg">
 </body>
 </html>
